fix: add min-width to ActionChip to prevent collapse

--- a/src/elements/action-chip/action-chip.module.css
+++ b/src/elements/action-chip/action-chip.module.css
@@ -10,6 +10,7 @@
   border: 2px solid var(--shade-3);
   box-shadow: 3px 3px 0 var(--shade-3);
   overflow: hidden;
+  min-width: 100px;
   min-height: 130px;
   /* button resets */
   font: inherit;
